...
            )
        },
        enabled = true,
        textStyle = TextStyle(color = MaterialTheme.colorScheme.primary),
        modifier = Modifier
            .fillMaxWidth()
            .testTag("convertedAmountField"),
        trailingIcon = {
            Text(
                text = toCurrency,
                fontWeight = FontWeight.Normal,
                color = MaterialTheme.colorScheme.primary
            )
...
